--- a/index.html
+++ b/index.html
@@ -1,40 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+  <link rel="manifest" href="manifest.webmanifest">
   <meta charset="UTF-8">
-  <link rel="manifest" href="manifest.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#1a4971">
-  <link rel="manifest" href="manifest.webmanifest">
   <title id="page-title">Loading…</title>
+  <!-- Add a favicon for better browser tab appearance -->
+  <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
     body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f4f6f9;color:#2c3e50;line-height:1.6;padding:20px}
     .container{max-width:900px;margin:auto;background:#fff;border-radius:12px;overflow:hidden;box-shadow:0 4px 20px rgba(0,0,0,.1)}
-    header{background:#1a4971;color:#fff;padding:20px;text-align:center}
-    header h1{margin:0;font-size:1.8rem}
-    header p{margin:5px 0 0;font-size:1rem;opacity:.9}
+    /* Header styling updated to incorporate the school crest and maroon colour scheme */
+    header{
+      background:#6e1818;
+      color:#fff;
+      padding:20px;
+      display:flex;
+      align-items:center;
+      justify-content:flex-start;
+      gap:16px;
+    }
+    header img.crest{
+      height:60px;
+      width:auto;
+      flex-shrink:0;
+    }
+    header .header-text{
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
+    }
+    header h1{
+      margin:0;
+      font-size:1.8rem;
+    }
+    header p{
+      margin:5px 0 0;
+      font-size:1rem;
+      opacity:.9;
+    }
     .form-section{padding:25px;border-bottom:1px solid #eee}
     .form-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:15px;margin-bottom:20px}
     label{display:block;margin-bottom:6px;font-weight:600;color:#2c3e50}
     input,select,textarea{width:100%;padding:10px;border:1px solid #ccc;border-radius:6px;font-size:1rem;transition:border .2s}
-    input:focus,select:focus,textarea:focus{outline:none;border-color:#1a4971;box-shadow:0 0 0 2px rgba(26,73,113,.2)}
+    input:focus,select:focus,textarea:focus{
+      outline:none;
+      border-color:#6e1818;
+      /* Use a subtle maroon glow around focused inputs */
+      box-shadow:0 0 0 2px rgba(110,24,24,0.2);
+    }
     .locked-msg{font-size:.9rem;color:#e74c3c;margin-top:5px}
     .hidden{display:none}
-    .assessment-header{background:#1a4971;color:#fff;padding:15px;border-radius:10px;margin:20px 0}
+    /* Assessment section header updated to maroon */
+    .assessment-header{
+      background:#6e1818;
+      color:#fff;
+      padding:15px;
+      border-radius:10px;
+      margin:20px 0;
+    }
     .assessment-header h2{margin:0;font-size:1.5rem}
     .assessment-header p{margin:5px 0 0;font-size:1rem}
-    .q{background:#f8f9fa;padding:18px;margin-bottom:18px;border-radius:8px;border-left:4px solid #1a4971}
+    .q{
+      background:#f8f9fa;
+      padding:18px;
+      margin-bottom:18px;
+      border-radius:8px;
+      /* Use maroon for the left border of each question */
+      border-left:4px solid #6e1818;
+    }
     .q strong{color:#2c3e50;font-size:1.1rem}
-    .answer-field{margin-top:10px;font-family:inherit}
-    .btn{background:#1a4971;color:#fff;border:none;padding:12px 20px;font-size:1rem;border-radius:6px;cursor:pointer;transition:background .2s;margin-right:10px}
-    .btn:hover{background:#0f3a56}
+    .answer-field{
+      margin-top:10px;
+      font-family:inherit;
+      /* Explicitly set text colour and background to ensure answers are visible */
+      color:#2c3e50;
+      background-color:#fff;
+    }
+    /* Primary buttons use the maroon colour; darken slightly on hover */
+    .btn{
+      background:#6e1818;
+      color:#fff;
+      border:none;
+      padding:12px 20px;
+      font-size:1rem;
+      border-radius:6px;
+      cursor:pointer;
+      transition:background .2s;
+      margin-right:10px;
+    }
+    .btn:hover{
+      background:#581313;
+    }
     .btn-secondary{background:#7f8c8d}
     .btn-secondary:hover{background:#95a5a6}
     .btn-group{margin-top:20px;text-align:center}
     .result-section{padding:25px;text-align:center}
     .result-header{margin-bottom:25px}
-    .grade{font-size:2.5rem;font-weight:bold;color:#1a4971}
+    .grade{
+      font-size:2.5rem;
+      font-weight:bold;
+      color:#6e1818;
+    }
     .grade small{font-size:1.2rem;color:#7f8c8d}
     .feedback{text-align:left;padding:15px;margin:12px 0;border-radius:8px;background:#f8f9fa}
     .correct{border-left:5px solid #27ae60}
@@ -48,47 +116,48 @@
 <body>
 <div class="container">
   <header>
-    <h1 id="header-title">Loading…</h1>
-    <p id="header-subtitle">Loading…</p>
+    <img src="crest_shield.png" alt="Pukekohe High School crest" class="crest">
+    <div class="header-text">
+      <h1 id="header-title">Loading…</h1>
+      <p id="header-subtitle">Loading…</p>
+    </div>
   </header>
+
   <section class="form-section" id="form">
     <div id="loading">Loading assessment data…</div>
+
     <div class="form-grid">
-      <div><label for="name">Student Name</label><input type="text" id="name" placeholder="Enter your name" autocomplete="name" required /></div>
+      <div><label for="name">Student Name</label><input type="text" id="name" placeholder="Enter your name" required /></div>
       <div>
-        <label for="id">Student ID</label><input type="text" id="id" placeholder="e.g. 12345" autocomplete="off" required />
+        <label for="id">Student ID</label><input type="text" id="id" placeholder="e.g. 12345" required />
         <div id="locked-msg" class="locked-msg hidden">ID locked to: <strong id="locked-id"></strong></div>
       </div>
-      <div><label for="teacher">Teacher</label><select id="teacher" required aria-live="polite"><option value="">Select teacher</option></select></div>
+      <div><label for="teacher">Teacher</label><select id="teacher" required><option value="">Select teacher</option></select></div>
       <div><label for="assessmentSelector">Assessment Part</label><select id="assessmentSelector"><option value="">Select part</option></select></div>
     </div>
-    <div class="btn-group"><button type="button" id="load-btn" class="btn">Load Assessment</button></div>
+
+    <div class="btn-group"><button class="btn" onclick="loadAssessment()">Load Assessment</button></div>
+
     <div id="questions"></div>
-    <div class="btn-group"><button type="button" id="submit-btn" class="btn">Submit & Grade</button></div>
+
+    <div class="btn-group"><button class="btn" onclick="submitWork()">Submit & Grade</button></div>
   </section>
+
   <section class="result-section hidden" id="result">
     <div class="result-header">
       <h2>Assessment Complete!</h2>
       <p><strong id="student"></strong> to <span id="teacher-name"></span></p>
-      <h3 class="grade" id="grade" aria-live="polite"></h3>
+      <div class="grade" id="grade"></div>
     </div>
     <div id="answers"></div>
     <div class="btn-group">
-      <button type="button" id="email-btn" class="btn">Email via Default App</button>
-      <button type="button" id="back-btn" class="btn btn-secondary">Back to Form</button>
+      <button class="btn" onclick="emailWork()">Email via Default App</button>
+      <button class="btn btn-secondary" onclick="back()">Back to Form</button>
     </div>
   </section>
 </div>
 
-<div id="toast" class="toast hidden" role="status" aria-live="polite"></div>
-<!-- Load script.js as ES module -->
-<script type="module">
-  import './script.js';
-</script>
-
-<!-- Fallback for very old browsers -->
-<script nomodule>
-  alert("Your browser is too old. Please use Chrome, Edge, Firefox, or Safari.");
-</script>
+<!-- Load the application logic. Using a regular script tag avoids issues with ES module loading via the file:// protocol. -->
+<script src="script.js" defer></script>
 </body>
 </html>
